--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -56,8 +56,7 @@
   display: block;
   position: absolute;
   height: 1px;
-  margin-top: -1px;
-  top: 50%;
+  top: 12px;
   left: 0px;
   right: 0px;
 }
@@ -102,15 +101,42 @@
 .nav1 li a,
 .nav2 li a {
   font-size: 15px;
-  line-height: 24px;
+  line-height: 34px;
   /* font-weight: 100; */
   font-family: Noto sans;
   margin: 0 25px;
+  margin-top: -5px;
   display: block;
   position: relative;
   text-transform: uppercase;
   color: #888998;
   letter-spacing: 1px;
+}
+.nav1 li a:hover,
+.nav2 li a:hover {}
+.nav1 li a .x,
+.nav2 li a .x {
+  position: absolute;
+  top: -5000px;
+  width: 19px;
+  padding-left: 6px;
+  padding-right: 9px;
+  background-color: #fff;
+  opacity: 0;
+  transform: translateY(-2px);
+  transition: opacity 0.2s ease, transform 0.2s ease, top 0s 0.2s;
+  left: 0;
+  width: 100%;
+  height: 19px;
+  padding: 0;
+}
+.nav1 li a:hover .x,
+.nav2 li a:hover .x,
+.con .nav1 li a.cbtn .x {
+  top: 8px;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.2s ease, transform 0.2s ease;
 }
 
 /* home */
@@ -125,6 +151,7 @@
 }
 .home .nav1 .logo svg {
   width: 246px;
+  /* margin-top: -2px; */
 }
 .home .nav1 li a,
 .home .nav2 li a {
@@ -138,7 +165,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  transition: all 0.25s cubic-bezier(.215, .61, .355, 1) 0.3s;
+  transition: all 0.25s cubic-bezier(.215, .61, .355, 1) 0.2s;
   background-color: #fff;
   z-index: 2;
 }
@@ -197,7 +224,7 @@
   text-align: center;
   top: -500px;
   width: 100%;
-  margin-top: 2px;
+  margin-top: 0px;
   z-index: 20;
   opacity: 0;
   transform: translateY(-10px);
@@ -322,6 +349,10 @@
   .home .nav2 li a {
     font-size: 15px;
   }
+  .nav1 ul:before,
+  .nav2 ul:before {
+    /* margin-top: 0px; */
+  }
 }
 @media only screen and (max-width: 1000px) {
   .nav1 {}
@@ -410,90 +441,4 @@
   .logomobile a svg {
     width: 136px;
   }
-}
-
-/* --- Contact ----------------------- */
-
-.contact {
-  position: absolute;
-  overflow-y: auto;
-  z-index: 12;
-  width: 100%;
-  top: 0;
-  bottom: 0;
-  left: -200%;
-  right: 0;
-  opacity: 0;
-  box-sizing: border-box;
-  transition: left linear 0s 0.3s, opacity cubic-bezier(.55, .085, .68, .53) 0.2s;
-}
-.contact > div {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-.contact > div > div {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-  width: 100%;
-  padding: 20px;
-}
-.contact .bg {
-  display: block;
-  position: absolute;
-  top: 0px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(255, 255, 255, 0.66);
-}
-.contact .cbox {
-  position: relative;
-  max-width: 334px;
-  margin: 0 auto;
-  padding: 54px;
-  background: #fff;
-  font-size: 16px;
-  line-height: 2.6em;
-  border: 3px solid #3d3d3d;
-  margin-bottom: 20px;
-  opacity: 0;
-  transform: translateY(-20px);
-  transition: all cubic-bezier(.55, .055, .675, .19) 0.2s 0.02s;
-}
-.contact h2 {
-  margin-bottom: 24px;
-  font-size: 30px;
-  font-weight: 800;
-}
-.contact .closebox {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  cursor: pointer;
-  padding: 20px;
-}
-.contact .close {
-  position: relative;
-  top: auto;
-  right: auto;
-  left: auto;
-  bottom: auto;
-  margin: 0;
-  transform: rotate(45deg);
-}
-.contact .close b {}
-
-/* on */
-
-.con .contact {
-  left: 0;
-  opacity: 1;
-  transition: opacity cubic-bezier(.25, .46, .45, .94) 0.3s, left linear 0s 0s;
-}
-.con .contact .cbox {
-  opacity: 1;
-  transform: translateY(0);
-  transition: all cubic-bezier(.215, .61, .355, 1) 0.3s 0.19s;
 }
