--- a/assets/css/p-projects.css
+++ b/assets/css/p-projects.css
@@ -1,165 +1,3 @@
-/* --- Project ----------------------- */
-
-.project .view {
-  padding-bottom: 95px;
-}
-.project main {}
-.project main,
-.project section {
-  padding: 0 0 10px 0;
-}
-.project .heading {
-  margin-bottom: 60px;
-}
-.project .heading .left {
-  text-align: left;
-}
-.project .heading .right {
-  text-align: right;
-}
-.project .heading h1 {
-  margin-bottom: 4px;
-}
-.project .heading h2 {
-  margin-bottom: 6px;
-}
-.project .heading .client {
-  font-size: 17px;
-}
-.project .heading li {
-  margin: 0;
-  font-size: 16px;
-  line-height: 1.7em;
-}
-.project .feature {
-  position: relative;
-}
-.project .boxfeature,
-.project section .box {
-  padding-left: 124px;
-}
-.project .feature img {
-  width: 100%;
-  /* padding-bottom: 5px; */
-}
-
-/* --- Project sections -------------- */
-
-.project section {}
-.project section .box {}
-.project section .content {}
-.project .column1 {}
-.project .column2 {}
-.project .column2 .box {
-  text-align: left;
-  display: table;
-}
-.project .column2 .box > div,
-.project .column2 .box > figure {
-  display: table-cell;
-  width: 45.5%;
-}
-.project .column2 .box > span {}
-.project .column2 .box > div {
-  vertical-align: middle;
-}
-.project .column2 .box > figure:nth-child(2n),
-.project .column2 .box > div:nth-child(2n) {}
-
-/* --- Project captions -------------- */
-
-.project .caption {
-  position: absolute;
-  top: 0;
-  left: auto;
-  margin-top: 20px;
-  margin-left: 20px;
-  cursor: pointer;
-  min-width: 48px;
-  min-height: 48px;
-  overflow: hidden;
-  transition: transform 0.2s ease, margin 0.2s ease;
-}
-.project .caption i {
-  position: absolute;
-  display: block;
-  right: 0;
-  bottom: 0;
-  width: 48px;
-  height: 48px;
-  background: #fff;
-  z-index: 2;
-}
-.close {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 10px;
-  height: 10px;
-  margin-top: -5px;
-  margin-left: -5px;
-  transform-origin: center center;
-  transition: all 0.2s 0.15s ease-out;
-}
-.close b {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  margin-top: 4px;
-  width: 100%;
-  height: 2px;
-  background-color: #000;
-  border-radius: 10px;
-  transform-origin: center;
-}
-.close b:nth-child(2n) {
-  transform: rotate(90deg);
-}
-.project .caption > span {
-  display: block;
-  max-width: 0px;
-  max-height: 0px;
-  font-size: 17px;
-  text-align: left;
-  overflow: hidden;
-  opacity: 0;
-  background: #fff;
-  transition: max-width ease-out 0.25s, max-height 0.25s ease-out, opacity 0.2s ease-out;
-}
-.project .caption span span {
-  display: block;
-  padding: 40px 35px 45px;
-  font-style: normal;
-  transition: all 0.2s ease-out;
-}
-.project .caption span {
-  color: transparent;
-}
-.project .caption.on {
-  margin-top: 0;
-  margin-left: 0;
-  transform: translateX(-55px);
-}
-.project .caption.on > span {
-  opacity: 1;
-  transition: max-width ease-out 0.2s, max-height 0.2s 0.05s ease-out, opacity 0.2s ease;
-}
-.project .caption span span {}
-.project .caption.on > i {}
-.project .caption.on .close {
-  transform: rotate(45deg);
-}
-
-/* Init */
-
-.project .caption.init > span {
-  position: absolute;
-  width: 460px;
-  max-width: none !important;
-  max-height: none !important;
-}
-
 /* --- Projects ---------------------- */
 
 .projects .nav2 {
@@ -228,60 +66,18 @@
     max-width: 700px;
   }
   .projects .list .box > div {
-    float: none;
+    float: none !important;
     width: 100%;
     margin-bottom: 25px;
   }
 }
-@media only screen and (max-width: 520px) {}
-
-/* --- Sidenav ----------------------- */
-
-.sidebar {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 3;
-}
-.sidebar.fixed {
-  position: fixed;
-}
-.sidebar .box {}
-.sidebar .box > div {
-  position: absolute;
-  left: 7px;
-  top: 310px;
-  z-index: 3;
-}
-.sidebar a {
-  position: relative;
-  display: block;
-  transform: rotate(-90deg);
-  /* transform: rotate(-90deg) translateZ(0px); */
-  border: 1px solid #eee;
-  padding: 20px 38px;
-  transform-origin: center center;
-  font-size: 17px;
-  /* width: 98px; */
-  /* height: 146px; */
-  margin-left: -37px;
-  margin-bottom: 137px;
-}
-.sidebar a.off {
-  color: #bebfc5;
-}
-.sidebar a:hover {}
-.sidebar .prev {
-  border-top-width: 0;
-  border-bottom-width: 0;
-  border-left-width: 0;
-}
-.sidebar .next {
-  margin-top: 39px;
-  border-top-width: 0;
-  border-bottom-width: 0;
-  /* border-right-width: 0; */
-}
-.sidebar.fixed .box > div {
-  top: 76px;
+@media only screen and (max-width: 520px) {
+  .projects .list h2 {
+    text-align: left;
+    float: none;
+    width: auto;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
 }
