--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -139,6 +139,17 @@
   transition: opacity 0.2s ease, transform 0.2s ease;
 }
 
+/* Acitve states */
+.nav1 li a.active .x,
+.nav2 li a.active .x,
+.nav1 li a.active:hover .x, 
+.nav2 li a.active:hover .x {
+  top: 30px;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
 /* home */
 
 .home .nav1 .box {
