--- a/assets/css/p-home.css
+++ b/assets/css/p-home.css
@@ -58,49 +58,12 @@
 .intro .fg {
   opacity: 0.7;
 }
-.intro .non > div {
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-  overflow: hidden;
-}
 .intro .non svg {
-  position: absolute;
-  top: -0.5%;
-  left: -0.5%;
-  width: 101%;
-  height: 101%;
-  /* top: 50%; */
-  /* left: 50%; */
-  /* margin-left: -150px; */
-  /* margin-top: -150px; */
+  width: 100%;
+  height: auto;
   z-index: 1;
   transform: translateZ(0);
 }
-.intro .n1,
-.intro .n2 {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: -3%;
-  width: 10%;
-  max-width: 65px;
-  position: relative;
-  z-index: 2;
-  transform: translateZ(0);
-}
-.intro .n1 > div,
-.intro .n2 > div {
-  display: block;
-  width: 100%;
-  height: 0;
-  padding-bottom: 100%;
-}
-.intro .n1 svg,
-.intro .n2 svg {
-  display: block;
-}
-.intro .n1 {}
-.intro .n2 {}
 .intro h1 {
   margin: 0 auto;
   max-width: 570px;
