--- a/assets/css/p.css
+++ b/assets/css/p.css
@@ -185,7 +185,7 @@ nav a.link:hover:after {
   margin-top: -8px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 42px;
+  margin-bottom: 40;
   font-size: 17px;
 }
 .content img,
